infrastructure/configs/fluxcd/webhook-receiver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-httproute
  namespace: flux-system
spec:
  parentRefs:
  - name: mdch-lab-gateway
    namespace: cilium
  hostnames:
  - "flux-webhook.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: notification-controller
      port: 80
