infrastructure/configs/fluxcd/webhook-receiver/allow-gateway-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-identity
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
  - fromEndpoints:
    - matchLabels:
        "reserved:ingress": ""
